# python-project-52

./: Makefile  README.md  db.sqlite3  pyproject.toml
.github/workflows/: pyCI.yml
task_manager/: mixins.py  settings.py  tests.py  urls.py  views.py
task_manager/labels/: tests.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_alter_label_options_label_updated_and_more.py
task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/statuses/: models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_options_remove_status_created_at_and_more.py
task_manager/tasks/: filters.py  models.py  tests.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_task_labels.py  0003_remove_task_created_at_task_created_task_updated_and_more.py
task_manager/templates/: base.html  index.html
task_manager/templates/includes/: nav.html
task_manager/templates/labels/: list.html  update.html
task_manager/templates/registration/: login.html  sign_up.html
task_manager/templates/statuses/: list.html
task_manager/templates/tasks/: create.html  detail.html  filter.html  list.html  update.html
task_manager/templates/users/: list.html  lists.html
task_manager/users/: apps.py  forms.py  froms.py  models.py  tests.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py  0002_alter_users_fullname_alter_users_nickname.py
