[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Project \"Task Manager\""
authors = ["Xapdina <daniilbagaturiya@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
django-bootstrap5 = "^24.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
